# VoIP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  authmenu.cpp  authmenu.h  authmenumodel.cpp  authmenumodel.h  authmenupresenter.cpp  authmenupresenter.h  connectionsettingsmenu.cpp  connectionsettingsmenu.h  databasevalidation.cpp  databasevalidation.h  lexicalvalidation.cpp  lexicalvalidation.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modulesip.cpp  modulesip.h  numbermenu.cpp  numbermenu.h  numbermenumodel.cpp  numbermenumodel.h  numbermenupresenter.cpp  numbermenupresenter.h  validation.h
app/: CMakeLists.txt  main.cpp
app/common/errors/: auth_error.cpp  auth_error.h  call_error.cpp  call_error.h
app/common/exceptions/: invalid_credentials_exception.cpp  invalid_credentials_exception.h  server_unavailable_exception.cpp  server_unavailable_exception.h
app/common/states/: call_state.h  request_states.h
app/common/validation/: lexicalvalidation.cpp  lexicalvalidation.h  regex_patterns.h  validation.cpp  validation.h
app/data/: CMakeLists.txt
app/data/repositories/auth/: auth_repository_impl.cpp  auth_repository_impl.h
app/data/repositories/calls/: call_repository_impl.cpp  call_repository_impl.h
app/data/repositories/contacts/: contact_fetcher_repository_impl.cpp  contact_fetcher_repository_impl.h
app/data/repositories/setting/: setting_repository_impl.cpp  setting_repository_impl.h
app/data/services/PBX/: contact_fetcher_pbx.cpp  contact_fetcher_pbx.h  pbx_api_constants.h
app/data/services/SIP/: module_sip.cpp  module_sip.h  my_account.cpp  my_account.h  my_call.cpp  my_call.h  returning_states.h
app/data/services/crypto/: crypto.cpp  crypto.h
app/data/services/setting_saver/: setting_saver.cpp  setting_saver.h
app/domain/controllers/auth/: auth_controller.cpp  auth_controller.h
app/domain/controllers/calls/: call_controller.cpp  call_controller.h
app/domain/controllers/contacts/: IContactRepository.h  contact_list_controller.cpp  contact_list_controller.h
app/domain/controllers/recent_calls/: recent_call_controller.cpp  recent_call_controller.h
app/domain/controllers/setting/: setting_controller.cpp  setting_controller.h
app/domain/entities/: auth_credits.cpp  auth_credits.h  call_session.cpp  call_session.h  contact.cpp  contact.h  pbx_auth_credits.cpp  pbx_auth_credits.h  recent_call.h  sip_uri.cpp  sip_uri.h
app/domain/interfaces/: auth_repository.cpp  auth_repository.h  call_initiator.cpp  call_initiator.h  call_repository.cpp  call_repository.h  contact_fetcher_repository.cpp  contact_fetcher_repository.h  recent_call_repository.cpp  recent_call_repository.h  setting_repository.cpp  setting_repository.h
app/model/: authmenumodel.cpp  authmenumodel.h
app/modules/sip/: CMakeLists.txt
app/modules/sip/logic/: modulesip.cpp  modulesip.h
app/modules/sip/presenter/: authmenupresenter.cpp  authmenupresenter.h
app/ui/auth/: authmenu.cpp
app/ui/model/: auth_menu_model.cpp  auth_menu_model.h  call_menu_model.cpp  call_menu_model.h  contact_list_model.cpp  contact_list_model.h  recent_call_model.cpp  recent_call_model.h  setting_menu_model.cpp  setting_menu_model.h
app/ui/presenter/: auth_menu_presenter.cpp  auth_menu_presenter.h  call_menu_presenter.cpp  call_menu_presenter.h  contact_list_presenter.cpp  contact_list_presenter.h  recent_call_presenter.cpp  recent_call_presenter.h  setting_menu_presenter.cpp  setting_menu_presenter.h
app/ui/view/auth/: auth_menu.cpp  auth_menu.h
app/ui/view/call_menu/: call_menu.cpp  call_menu.h
app/ui/view/contact_list/: contact_list.cpp  contact_list.h
app/ui/view/main_window/: main_window.cpp  main_window.h  mainwindow.ui
app/ui/view/recent_calls/: recent_calls.cpp  recent_calls.h
app/ui/view/setting/: setting_menu.cpp  setting_menu.h
utils/: CMakeLists.txt
