set(PJ_SKIP_EXPERIMENTAL_NOTICE ON CACHE BOOL "" FORCE)
set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
set(PJMEDIA_WITH_VIDEO OFF CACHE BOOL "" FORCE)
set(PJMEDIA_WITH_FFMPEG OFF CACHE BOOL "" FORCE)
set(PJMEDIA_WITH_WEBRTC_AEC3 OFF CACHE BOOL "" FORCE)
set(PJMEDIA_WITH_AUDIODEV ON CACHE BOOL "" FORCE)
set(PJMEDIA_WITH_AUDIODEV_ALSA ON CACHE BOOL "" FORCE)
set(PJMEDIA_WITH_AUDIODEV_NULL ON CACHE BOOL "" FORCE)
set(PJSIP_WITH_TLS OFF CACHE BOOL "" FORCE)
set(PJNATH_WITH_UPNP OFF CACHE BOOL "" FORCE)

add_subdirectory(pjproject EXCLUDE_FROM_ALL)
